JavaFX application launch fix